Don't show theme uninstall infobar for synced themes.

Bug: 731688
Change-Id: I4c42adc0e5a11dae0486824fc7c0754413f601c8
Reviewed-on: https://chromium-review.googlesource.com/530066
Reviewed-by: Peter Kotwicz <pkotwicz@chromium.org>
Commit-Queue: Evan Stade <estade@chromium.org>
Cr-Commit-Position: refs/heads/master@{#478667}
Former-commit-id: 53df432c9254c12868ab6c932c4c4dc486f68984